kubernetes/data-lakehouse/base/management/pgadmin4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
        - name: pgadmin4
          image: dpage/pgadmin4:9.8
          ports:
            - containerPort: 80
          volumeMounts:
            - name: servers
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: certs
              mountPath: /certs
              readOnly: true
            - name: data
              mountPath: /var/lib/pgadmin
      volumes:
        - name: servers
          configMap:
            name: pgadmin4-servers
        - name: client-tls
          secret:
            secretName: pgadmin4-client-tls
        - name: certs
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: pgadmin4-data
