kubernetes/data-lakehouse/base/management/pgadmin4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
  namespace: data
spec:
  selector:
    app: pgadmin4
  ports:
    - port: 80
      targetPort: 80
