kubernetes/data-lakehouse/base/management/pgadmin4/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4
  namespace: data
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin4.${cluster_domain}`)
      kind: Rule
      services:
        - name: pgadmin4
          port: 80
